Bug 64826 - FILESAVE: Exporting to DOCX doesn't save 'Track Changes' when it is turned on
Summary: FILESAVE: Exporting to DOCX doesn't save 'Track Changes' when it is turned on
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: All All
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.1.0 target:4.2.0
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2013-05-21 13:47 UTC by Adam CloudOn
Modified: 2017-04-14 08:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX with 'Track Changes' turned on (17.28 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-05-21 13:47 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-05-21 13:47:30 UTC
Created attachment 79619 [details]
DOCX with 'Track Changes' turned on

Problem description: 
When loading a DOCX that has 'Track Changes' turned on into LO,
and saving it as NEW.DOCX - the 'Track Changes' is not saved 
to the NEW.DOCX.

Steps to reproduce:
1. Open attached DOCX in LO
2. in the menu 'Edit' -> 'Changes' -> 'Record' is checked
3. Save as NEW.DOCX
4.1 Load the NEW.DOCX in Word - 'Track Changes' is turned off
alternativly
4.2 Load the NEW.DOCX in LO - 'Record' is unchecked

Current behavior:
LO doesn't save the 'Track Changes' when exporting to DOCX

Expected behavior:
LO should store the state of 'Track Changes' when exporting to DOCX

Operating System: Windows 8
Version: 4.0.2.2 release
Comment 1 Commit Notification 2013-05-21 14:02:44 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd0b079c9298331a090e3690a85321781d16ed3c

fdo#64826: fix for exporting to DOCX that didnt save track 'changes state'



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Jorendc 2013-05-21 14:14:30 UTC
I can confirm that using Linux Mint 15 x64 with LibreOffice 4.0.3.3. Therefore I mark this as NEW, but because Adam already send a patch for it, I'll mark it as RESOLVED FIXED right away.
Comment 3 Jorendc 2013-05-21 16:39:49 UTC
Mmh, I can see it is fixed when you resave your document. But it isn't fixed when you save the document to another name (or create a file from scratch, check "record changes", do some changes and save as docx).

I marked this bug report to fast as RESOLVED FIXED?

Kind regards,
Joren
Comment 4 Adam CloudOn 2013-05-22 07:10:23 UTC
(In reply to comment #3)
> Mmh, I can see it is fixed when you resave your document. But it isn't fixed
> when you save the document to another name (or create a file from scratch,
> check "record changes", do some changes and save as docx).

Very strange. When I checked on my machine - I checked by doing 'Save As' and saving to a NEW.DOC.
On my machine (Linux) it appeared to be fixed.
I will recheck it now and also check the 'new doc from scratch' scenario.
Comment 5 Adam CloudOn 2013-05-22 07:11:07 UTC
Of ou(In reply to comment #4)
> Very strange. When I checked on my machine - I checked by doing 'Save As'
> and saving to a NEW.DOC.

Of course I mean 'DOCX', not 'DOC'.
Comment 6 Commit Notification 2013-05-23 12:39:28 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=286bfde8c3b855db8487dbc1337993056026a5a9

fdo#64826 : fix for track-changes export in DOCX



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.