fdo#64826: fix for exporting to DOCX that didnt save track 'changes state'

Change-Id: If5b3198769a08cc751d542f8305fd7f41c73ec26
Reviewed-on: https://gerrit.libreoffice.org/3991
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>